--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "axios": "^1.7.2",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
+    "react-datepicker": "^7.3.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.24.0",
     "react-slick": "^0.30.2",
+    "react-time-picker": "^7.0.0",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.1.4"
   },
