--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "proxy": "http://localhost:5173",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -13,6 +14,7 @@
     "@heroicons/react": "^2.1.5",
     "@react-oauth/google": "^0.12.1",
     "axios": "^1.7.2",
+    "dotenv": "^16.4.5",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-datepicker": "^7.3.0",
