--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18.3.1",
     "react-google-recaptcha": "^3.1.0",
     "react-icons": "^5.2.1",
+    "react-qr-code": "^2.0.15",
     "react-router-dom": "^6.24.0",
     "react-slick": "^0.30.2",
     "react-time-picker": "^7.0.0",
