--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "proxy": "http://localhost:5173",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -13,12 +14,14 @@
     "@heroicons/react": "^2.1.5",
     "@react-oauth/google": "^0.12.1",
     "axios": "^1.7.2",
+    "dotenv": "^16.4.5",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-datepicker": "^7.3.0",
     "react-dom": "^18.3.1",
     "react-google-recaptcha": "^3.1.0",
     "react-icons": "^5.2.1",
+    "react-qr-code": "^2.0.15",
     "react-router-dom": "^6.24.0",
     "react-slick": "^0.30.2",
     "react-time-picker": "^7.0.0",
