--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^2.1.2",
     "@heroicons/react": "^2.1.5",
     "@react-oauth/google": "^0.12.1",
     "axios": "^1.7.2",
     "dotenv": "^16.4.5",
+    "moment-timezone": "^0.5.45",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-datepicker": "^7.3.0",
